fix: html needs relative position when scrollbarwidth margin is applied

--- a/src/scss/-basics.scss
+++ b/src/scss/-basics.scss
@@ -60,6 +60,7 @@
 		min-width: 320px;
 		box-sizing: border-box;
 		overflow-x: hidden;
+		position: relative;
 
 		// "Fix" nasty/smudgy font rendering on mac
 		-webkit-font-smoothing: antialiased;
